# trajectory_image_record

./: CMakeLists.txt  package.xml  setup.py
action/: RecordImage.action
launch/: observation_recorder.launch
msg/: ImageRecord.msg
scripts/: observation_record_manager.py
src/trajectory_image_record/: observation_recorder.py  traj_record.py  traj_view.py  video_recorder.py
